@@ -23,6 +23,7 @@
 #define __Eaagles_Basic_Thread_H__
 
 #include "openeaagles/basic/Object.h"
+#include "openeaagles/basic/Statistic.h"
 
 namespace Eaagles {
 namespace Basic {
@@ -183,7 +184,19 @@ class ThreadPeriodicTask : public Thread {
 public:
    ThreadPeriodicTask(Component* const parent, const LCreal priority, const LCreal rate);
 
-   LCreal getRate() const;
+   LCreal getRate() const;                         // Update rate (must be greater than zero)
+   unsigned int getTotalFrameCount() const;        // Total frame count
+
+   // Busted (overrun) frames statistics; overrun frames time (seconds)
+   // (Windows only)
+   const Statistic& getBustedFrameStats() const;
+
+   // Variable delta time flag (windows only).
+   // If false (default), delta time is always passed as one over the update rate;
+   // If true and there's a frame overrun then a delta time adjusted for the overrun
+   // is used.
+   bool isVariableDeltaTimeEnabled() const;
+   bool setVariableDeltaTimeFlag(const bool enable);
 
    // User defined work function
    private: virtual unsigned long userFunc(const LCreal dt) =0;
@@ -196,6 +209,9 @@ private:
    virtual unsigned long mainThreadFunc();
 
    LCreal rate;         // Loop rate (hz); until our parent shuts down
+   Statistic bfStats;   // Busted (overrun) frame statistics (windows only)
+   unsigned int tcnt;   // total frame count
+   bool vdtFlg;         // Variable delta time flag
 };
 
 //------------------------------------------------------------------------------
